basic simulation added