@@ -5,8 +5,7 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 import algorithms.AbstractPhilosopher;
-
-import simulation.*;
+import simulation.SimuType;
 
 public class Parser {
 
@@ -19,6 +18,7 @@ public class Parser {
         List<Statistic> statistics = new ArrayList<>();
         List<String> timelines = new ArrayList<>();
         StringBuilder sb = new StringBuilder();
+        boolean simulatePickups = SimuType.getSimulatePickups();
 
         for(AbstractPhilosopher ph: philosophers){
             StringBuilder strb = new StringBuilder();
@@ -27,41 +27,22 @@ public class Parser {
             statistic.setId("  PH_" + ph.getPhId());
             statistics.add(statistic);
             strb.append("PH_" + ph.getPhId() + " ");
-            strb.append(parsePhilosopher(ph.getSB().toString(), statistic));
+
+            if(simulatePickups){
+                strb.append(parsePhilosopherWithPickups(ph.getSB().toString(), statistic));
+            } else {
+                strb.append(parsePhilosopher(ph.getSB().toString(), statistic));
+            }
+
             timelines.add(strb.toString());
             //sb.append("\n");
         }
 
-        for(AbstractPhilosopher ph: philosophers){
-            StringBuilder stringBuilder = new StringBuilder();
-            stringBuilder.append(timelines.get(ph.getPhId()));
-
-            for(int i = statistics.get(ph.getPhId()).getFinishLength() ; i < maxLength; i++) {
-                switch(statistics.get(ph.getPhId()).getLast()){
-                    case Events.EAT, Events.PICKUPLEFT, Events.THINK:
-                        stringBuilder.append(Events.BLOCKED);
-                        statistics.get(ph.getPhId()).incrementBlockTime();
-                        break;
-                    case Events.PICKUPRIGHT:
-                        stringBuilder.append(Events.EAT);
-                        statistics.get(ph.getPhId()).incrementEatTime();
-                        break;
-                    case Events.PUTDOWNLEFT, Events.PUTDOWNRIGHT:
-                        stringBuilder.append(Events.THINK);
-                        statistics.get(ph.getPhId()).incrementThinkTime();
-
-                }
-
-            }
-            stringBuilder.append("\n");
-            timelines.set(ph.getPhId(), stringBuilder.toString());
-        }
+        fillIn(philosophers, timelines, statistics, simulatePickups);
 
         for(String timeline: timelines){
             sb.append(timeline);
         }
-
-
 
         sb.append("------------------------------------Statistics------------------------------------\n");
 
@@ -82,7 +63,62 @@ public class Parser {
         return sb.toString();
     }
 
-    private static String parsePhilosopher(String timeline, Statistic statistic){
+    private static void fillIn(List<AbstractPhilosopher> philosophers, List<String> timelines, List<Statistic> statistics, boolean simulatePickups) {
+        if(simulatePickups) {
+            for (AbstractPhilosopher ph : philosophers) {
+                StringBuilder stringBuilder = new StringBuilder();
+                stringBuilder.append(timelines.get(ph.getPhId()));
+
+                for (int i = statistics.get(ph.getPhId()).getFinishLength(); i < maxLength; i++) {
+                    switch (statistics.get(ph.getPhId()).getLast()) {
+                        case Events.PICKUPLEFT, Events.THINK:
+                            stringBuilder.append(Events.BLOCKED);
+                            statistics.get(ph.getPhId()).incrementBlockTime();
+                            break;
+                        case Events.PICKUPRIGHT:
+                            stringBuilder.append(Events.EAT);
+                            statistics.get(ph.getPhId()).incrementEatTime();
+                            break;
+                        case Events.PUTDOWNLEFT, Events.PUTDOWNRIGHT:
+                            stringBuilder.append(Events.THINK);
+                            statistics.get(ph.getPhId()).incrementThinkTime();
+
+                    }
+
+                }
+                stringBuilder.append("\n");
+                timelines.set(ph.getPhId(), stringBuilder.toString());
+            }
+
+        } else {
+            for (AbstractPhilosopher ph : philosophers) {
+                StringBuilder stringBuilder = new StringBuilder();
+                stringBuilder.append(timelines.get(ph.getPhId()));
+
+                for (int i = statistics.get(ph.getPhId()).getFinishLength(); i < maxLength; i++) {
+                    switch (statistics.get(ph.getPhId()).getLast()) {
+                        case Events.THINK:
+                            stringBuilder.append(Events.BLOCKED);
+                            statistics.get(ph.getPhId()).incrementBlockTime();
+                            break;
+                        case Events.PICKUP:
+                            stringBuilder.append(Events.EAT);
+                            statistics.get(ph.getPhId()).incrementEatTime();
+                            break;
+                        case Events.EAT:
+                            stringBuilder.append(Events.THINK);
+                            statistics.get(ph.getPhId()).incrementThinkTime();
+
+                    }
+
+                }
+                stringBuilder.append("\n");
+                timelines.set(ph.getPhId(), stringBuilder.toString());
+            }
+        }
+    }
+
+    private static String parsePhilosopherWithPickups(String timeline, Statistic statistic){
         String id;
         List<String> sb = new ArrayList<>();
 
@@ -193,10 +229,79 @@ public class Parser {
         if(sb.size() > maxLength) maxLength = sb.size(); //determine the maximum length of the timelines
         statistic.setFinishLength(sb.size());
 
-        statistic.setLast(sb.get(sb.size() - 1)); //set Last element for deadlock detection
-        String result = sb.stream().collect(Collectors.joining(""));
-        return result;
+        statistic.setLast(sb.getLast()); //set Last element for deadlock detection
+        return sb.stream().collect(Collectors.joining(""));
     }
+
+    private static String parsePhilosopher(String timeline, Statistic statistic){
+        List<String> sb = new ArrayList<>();
+
+        String[] events = timeline.split("\n");
+        int time = 0;
+
+        for (String event : events) {
+            if (!event.trim().isEmpty()) {
+                String[] parts = event.split(":");
+                String action = parts[1].trim();
+                int endTime = Integer.parseInt(parts[2].trim());
+
+                switch (action) {
+                    case Events.THINK:
+                        while (time <= endTime) {
+                            sb.add(Events.THINK);
+                            time++;
+
+                            statistic.incrementThinkTime();
+
+                        }
+                        break;
+
+                    case Events.PICKUP:
+                        int blockedpup = 0;
+                        while (time < endTime) {
+                            time++;
+                            sb.add(Events.BLOCKED);
+
+                            statistic.incrementBlockTime();
+
+                            blockedpup++;
+                        }
+
+                        statistic.incrementMaxBlockedTime(blockedpup);
+
+                        sb.add(Events.PICKUP);
+                        time++;
+                        break;
+
+
+                    case Events.EAT:
+                        while (time <= endTime) {
+                            sb.add(Events.EAT);
+                            time++;
+
+                            statistic.incrementEatTime();
+
+                        }
+                        break;
+
+
+                    default:
+                        sb.add("[ERR]");
+                        break;
+                }
+
+
+
+            }
+        }
+
+        if(sb.size() > maxLength) maxLength = sb.size(); //determine the maximum length of the timelines
+        statistic.setFinishLength(sb.size());
+
+        statistic.setLast(sb.getLast()); //set Last element
+        return sb.stream().collect(Collectors.joining(""));
+    }
+
 }
 
 
